--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,15 @@ jobs:
         run: |
           # Use curl to fetch commit data from the external API
           curl -L \
-                -H "Accept: application/vnd.github+json" \
-                -H "Authorization: Bearer $GH_TOKEN" \
-                -H "X-GitHub-Api-Version: 2022-11-28" \
-                https://api.github.com/repos/donggook-me/dkdev.github.io/commits > commit_data.json
-          
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/donggook-me/dkdev.github.io/commits > commit_data.json
+
+      - name: Commit and push fetched data to repository
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add commit_data.json
+          git commit -m "Update commit data"
+          git push origin main
