--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Fetch Commit Data from External API
 on:
   push:
     branches:
-      - main  # Modify to the default branch name in your repository
+      - main
   schedule:
     - cron: '*/5 * * * *'  # Run every 5 minutes
 
@@ -13,22 +13,29 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2  # This action checks out your repository
+        uses: actions/checkout@v2
 
       - name: Fetch commit data from external API
         run: |
           # Use curl to fetch commit data from the external API
-          curl -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $GH_TOKEN" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/donggook-me/dkdev.github.io/commits > commit_data.json
+          commit_data=$(curl -sSL -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $GH_TOKEN" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/donggook-me/dkdev.github.io/commits)
+
+          if [[ $(echo "$commit_data" | jq length) -gt 0 ]]; then
+            mkdir -p data  # Create 'data' directory if not exists
+            timestamp=$(date +'%Y%m%d%H%M%S')  # Get current timestamp
+            echo "$commit_data" > data/commit_data_$timestamp.json
+          else
+            echo "No new commit data." > data/empty_commit_data.txt
+          fi
 
       - name: Commit and push fetched data to repository
         run: |
-          cd $GITHUB_WORKSPACE  # Ensure you're in the repository directory
+          cd $GITHUB_WORKSPACE
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
-          git add commit_data.json
-          git commit -m "Update commit data"
-          git push origin main
+
+          if [[ -n $(git status --porcelain) ]]; then
+            git add data
+            git commit -m "Update commit data"
+            git push origin main
+          fi
