--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: '*/5 * * * *'  # Run every 5 minutes
+  # schedule:
+  #   - cron: '*/5 * * * *'  # Run every 5 minutes
 
 jobs:
   fetch-commit-data:
