--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Fetch commit data from external API
         run: |
           # Use curl to fetch commit data from the external API
-          commit_data=$(curl -sSL -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $GH_TOKEN" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/donggook-me/dkdev.github.io/commits)
+          commit_data=$(curl -sSL -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/donggook-me/dkdev.github.io/commits)
 
           if [[ $(echo "$commit_data" | jq length) -gt 0 ]]; then
             mkdir -p data  # Create 'data' directory if not exists
