--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,38 @@
-name: Fetch Commit Data from External API
+name: Fetch Commit History
 
 on:
-  push:
-    branches:
-      - main
-  # schedule:
-  #   - cron: '*/5 * * * *'  # Run every 5 minutes
+  schedule:
+    - cron: '0 0 * * *'  # Run every day at midnight
 
 jobs:
-  fetch-commit-data:
+  fetch-commit-history:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Fetch commit data from external API
+      - name: Get members of "gdsc" organization
+        id: get-members
         run: |
-          # Use curl to fetch commit data from the external API
-          commit_data=$(curl -sSL -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/donggook-me/dkdev.github.io/commits)
+          members=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" https://api.github.com/orgs/Google-DSC-Kookmin/members)
+          echo "${members}" > members.json
 
-          if [[ $(echo "$commit_data" | jq length) -gt 0 ]]; then
-            mkdir -p data  # Create 'data' directory if not exists
-            echo $commit_data
-            echo "$commit_data" > data/commit_data.json
-          else
-            echo "No new commit data." > data/empty_commit_data.txt
-          fi
+      - name: Fetch commit history for each member
+        id: fetch-commit-history
+        run: |
+          members=$(cat members.json | jq -r '.[].login')
+          commit_data="{}"
+
+          for member in $members; do
+            member_id=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/users/${member}" | jq -r '.id')
+            member_commits=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/users/${member}/events")
+            if [[ $(echo "$member_commits" | jq length) -gt 0 ]]; then
+              commit_data=$(echo "$commit_data" | jq --arg member "$member_id" --argjson commits "$member_commits" '. + { ($member): $commits }')
+            fi
+          done
+
+          echo "$commit_data" > data/data.json
 
       - name: Commit and push fetched data to repository
         run: |
