--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,10 @@
 name: Fetch Commit History
 
-
 on:
   push:
     branches:
       - master
   workflow_dispatch:
-
 
 jobs:
   fetch-commit-history:
@@ -19,15 +17,15 @@ jobs:
       - name: Get members of "gdsc" organization
         id: get-members
         run: |
-        # 임시 더미데이터 사용
-          members = ("donggook-me")
+          # 임시 더미데이터 사용
+          members=("donggook-me")
           
       - name: Fetch commit history for each member
         id: fetch-commit-history
         run: |
           commit_data="{}"
           
-          for member in $members; do
+          for member in "${members[@]}"; do
             member_id=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/users/${member}" | jq -r '.id')
             member_commits=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/users/${member}/events")
             
@@ -39,9 +37,8 @@ jobs:
               commit_data=$(echo "$commit_data" | jq --arg member "$member_id" --argjson commits "$commits_data" '.[$member] += $commits')
             fi
           done
-        
+          
           echo "$commit_data" > data/data.json
-
 
       - name: Commit and push fetched data to repository
         run: |
