--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,15 +26,14 @@ jobs:
           commit_data="{}"
           
           for member in "${members[@]}"; do
-            member_id=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/users/${member}" | jq -r '.id')
             member_commits=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/users/${member}/events")
             
             if [[ $(echo "$member_commits" | jq length) -gt 0 ]]; then
-              # Extracting commit-related data (userId, commit message, time)
-              commits_data=$(echo "$member_commits" | jq -r 'map(select(.type == "PushEvent")) | .[].payload.commits[] | { userId: .author.name, commitMessage: .message, commitTime: .timestamp }')
-              
+              # Extracting commit-related data (commit message, time)
+              commits_data=$(echo "$member_commits" | jq -r 'map(select(.type == "PushEvent")) | .[].payload.commits[] | {commitMessage: .message, commitTime: .timestamp }')
+              echo $commits_data
               # Append the commit data to the member's entry in commit_data
-              commit_data=$(echo "$commit_data" | jq --arg member "$member_id" --argjson commits "$commits_data" '.[$member] += $commits')
+              commit_data=$(echo "$commit_data" | jq --arg member "$member" --argjson commits "$commits_data" '.[$member] += $commits')
             fi
           done
           
