--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,35 +24,30 @@ jobs:
         id: fetch-commit-history
         run: |
           set -x
-          commit_data="{}"
+          
+          all_commits=()
           
           for member in "${members[@]}"; do
             echo "Fetching commit history for $member..."
             member_commits=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/users/${member}/events")
-            echo "Raw member_commits data: $member_commits"
       
             if [[ $(echo "$member_commits" | jq length) -gt 0 ]]; then
-              # Extracting commit-related data (commit message, time)
-              commits_data=$(echo "$member_commits" | jq -r '.[].payload.commits[] | {commitMessage: .message, commitTime: .timestamp }')
-              echo "Raw commits_data: $commits_data"
-      
-              # Check if the commits_data is not empty
-              if [ -n "$commits_data" ]; then
-                # Append the commit data to the member's entry in commit_data
-                commit_data=$(echo "$commit_data" | jq --arg member "$member" --argjson commits "$commits_data" '.[$member] += $commits')
-                echo "Commit data for $member: $commit_data"
-              else
-                echo "No commits for $member in this period."
-              fi
+              all_commits+=("$member_commits")
             else
-              echo "No events found for $member."
+              echo "No new commit data for $member."
             fi
           done
-          
-          echo "Final commit data: $commit_data"
-          echo "$commit_data" > data/data.json
-        shell: /usr/bin/bash -e {0}
+      
+          if [[ ${#all_commits[@]} -gt 0 ]]; then
+            mkdir -p data
+            timestamp=$(date +'%Y%m%d%H%M%S')
+            echo "${all_commits[@]}" > data/commit_data_$timestamp.json
+          else
+            echo "No new commit data for any member." > data/empty_commit_data.txt
+          fi
 
+
+      
 
 
       - name: Commit and push fetched data to repository
